# jom

./: README.md  dotenv  pyproject.toml
src/: test_costs.py
src/car_charging/: cost_services.py  urls.py  zaptec_services.py
src/car_charging/management/commands/: fetch_charging_sessions.py  insert_historical_fees.py  load_spot_prices.py  set_cost_details.py
src/car_charging/managers/: charging_session_manager.py
src/car_charging/models/: CostDetails.py
src/car_charging/static/car_charging/css/: user_costs.css
src/car_charging/static/car_charging/js/: user_costs.js
src/car_charging/templates/car_charging/: index.html  user_costs.html
src/car_charging/tests/: test_cost_details_model.py  test_cost_services.py  test_fetch_charging_sessions_command.py  test_history_view.py  test_set_cost_details_command.py  test_zaptec_services.py
src/car_charging/views/: __init__.py  costs_frontend.py
