[project]
name = "joint-ownership-management"
version = "0.1.0"
description = "Efficient Django-based solution for managing parking and EV charging in joint ownership settings, with potential for future expansion into broader asset management."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tord Aronsen", email = "tordaro@gmail.com" }]
license = { text = "GNU GPLv3" }
dependencies = [
	"Django>=5.2.13,<6.0.0",
	"ipython>=9.10.1,<10.0.0",
	"python-dotenv>=1.2.2,<2.0.0",
	"psycopg2-binary>=2.9.11,<3.0.0",
	"pytz>=2026.1.post1,<2027.0",
	"requests>=2.33.1,<3.0.0",
	"certifi>=2026.2.25",
	"types-requests>=2.33.0.20260408,<3.0.0",
	"openpyxl>=3.1.5,<4.0.0",
	"tabulate>=0.10.0,<1.0.0",
]

[dependency-groups]
dev = [
	"black>=26.3.1,<27.0.0",
	"mypy>=1.20.1,<2.0.0",
	"ruff>=0.15.10,<1.0.0",
	"pytest>=9.0.3,<10.0.0",
	"pytest-django>=4.12.0,<5.0.0",
	"django-stubs>=6.0.2,<7.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["car_charging*", "jom*"]

[tool.mypy]
exclude = ["migrations"]
ignore_missing_imports = true

[tool.ruff]
exclude = ["migrations"]
line-length = 150

[tool.black]
exclude = "migrations"
line-length = 150
string-normalization = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "jom.settings"
python_files = ["test_*.py", "*_test.py"]
